[package]
name = "specs-hierarchy"
version = "0.6.0"
authors = ["Aceeri <conmcclusk@gmail.com>", "Rhuagh <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/specs-hierarchy.git"
homepage = "https://github.com/rustgd/specs-hierarchy.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/specs-hierarchy"
description = "Scene graph type hierarchy abstraction for use with specs"

keywords = ["specs", "scenegraph", "hierarchy"]

[dependencies]
hibitset = { version = "0.6.4", default-features = false }
specs = { git = "https://github.com/amethyst/specs.git", rev = "d303a8efca9077debc4f0f9c25bce62c855bbe7d", default-features = false, features = ["shred-derive"]}
shrev = "1.1.3"

[features]
default = ["parallel"]
parallel = ["specs/parallel", "hibitset/parallel"]
